@@ -1,3 +1,9 @@
+Wed Jul 10 15:14:43 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/cc1/value.rb : Refactor relationships between VersionGroup
+	  object and its Version object in order to exactly represent a design
+	  of the value version management.
+
 Fri Jun 28 10:23:30 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* release.ga : 3.0.10
